# rfc

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: search_bench.rs
src/: lib.rs  main.rs
src/api/: datatracker.rs  mod.rs  rfc_editor.rs
src/cache/: metadata.rs  mod.rs  storage.rs
src/commands/: cache.rs  fetch.rs  fetch_pipeline.rs  mod.rs  search.rs  view.rs  viewer.rs
src/models/: document.rs  search.rs
tests/: integration_test.rs
