[package]
name = "ietf-rfc"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to search, retrieve, and display IETF RFCs and drafts"
license = "BSD-3-Clause"
authors = ["Trey Aspelund"]
repository = "https://github.com/treyaspelund/rfc"
readme = "README.md"
keywords = ["rfc", "ietf", "cli", "networking"]
categories = ["command-line-utilities"]

[lib]
name = "rfc"
path = "src/lib.rs"

[[bin]]
name = "rfc"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML to text conversion (fallback for drafts without plain text)
html2text = "0.17"

# URL encoding
urlencoding = "2"

# Platform-specific directories
directories = "6"

# Error handling
anyhow = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Temp files for editor support
tempfile = "3"

# Open URLs in browser
opener = "0.8"

[dev-dependencies]
tokio-test = "0.4"
